js/js.translator/testData/incremental/invalidation/inlineFunctionAsFunctionReference/lib1/l1.3.kt
inline fun bar() = "2"
